# transformer-mentor

./: .gitignore  .pre-commit-config.yaml  .zshrc-template  Makefile  README.md  learning_plan.md  pyproject.toml  setup.sh  todo.md
.devcontainer/: Dockerfile  setup.sh
data/: input.txt
notebooks/: module0.ipynb  module1.ipynb  module2.ipynb
notebooks/module0/: 0_Tensors.ipynb  1_Datasets_and_DataLoaders.ipynb  2_Transforms.ipynb  3_Build_Model.ipynb  X_template.ipynb
project_data/: input.txt
